# fusion-sync

./: .gitignore  LICENSE  README.md  demo.txt  pyproject.toml  requirements.txt
assets/: uploader.css  uploader.js
assets/css/: style.css
assets/fusionsync/: fusion-sync.css  index.html  main.js  package-lock.json  package.json  rollup.config.js  uppy.js  vite.config.js
assets/fusionsync/assets/: fusion-sync.css
assets/fusionsync/src/: client.js  locale.js  main.js  run.js  sync.js  uppy_cli.js  uppy_plugin.js
assets/js/: main.js
assets/tus/: demo.js
assets/uppy/: uploader.js  uppy.min.js
fusion_sync/: admin.py  apps.py  forms.py  helper.py  models.py  urls.py  utils.py  views.py
fusion_sync/api/: __init__.py  serializers.py  viewset.py
fusion_sync/migrations/: 0001_initial.py  0002_alter_fusionsync_file.py  0003_alter_fusionsync_file.py
server/: settings.py  urls.py
templates/: aws.html  base.html  index.html  index_forms.html  tus.html  uppy.html
